--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -3,6 +3,7 @@
 .footer {
   border-top: 2px solid $light;
   height: 20vh;
+  background: transparent;
   display: flex;
   flex-direction: column;
   align-items: center;
