--- a/components/MayaViewer/MayaViewer.module.scss
+++ b/components/MayaViewer/MayaViewer.module.scss
@@ -1,7 +1,7 @@
 @import '../variables';
 
-$apple-font: "SF Pro Display", "SF Pro Text", -apple-system, BlinkMacSystemFont,
-  "Helvetica Neue", Helvetica, Arial, sans-serif;
+$apple-font: 'SF Pro Display', 'SF Pro Text', -apple-system, BlinkMacSystemFont,
+  'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 .section {
   position: relative;
